--- a/src/Main/tab19.form
+++ b/src/Main/tab19.form
@@ -103,7 +103,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="kuro">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
@@ -113,7 +113,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="shiro">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
